# llm-commit

./: DESIGN.md  README.md  TASK.md  install.sh  pyproject.toml
.github/workflows/: generator-generic-ossf-slsa3-publish.yml  pylint.yml
homebrew/: llm-commit.rb
src/llm_commit/: cli.py  config.py  git_client.py  llm_provider.py  prompt_builder.py  provider_factory.py
src/llm_commit/providers/: anthropic_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
tests/: test_config.py  test_prompt_builder.py  test_provider_factory.py
